// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> when children are passed and \`checkboxWrapTag\` prop is "span" and \`checkboxWrapClassName\` prop is "test" should match the snapshot 1`] = `
<div>
  <div>
    <span
      class="test"
    >
      <div
        class="icheckbox indeterminate"
      >
        <input
          style="opacity: 0; position: absolute;"
          type="checkbox"
          value=""
        />
        <ins
          class="iCheck-helper"
          role="presentation"
          style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
        />
      </div>
    </span>
  </div>
</div>
`;

exports[`<CheckboxGroup /> when children are passed and \`className\` prop is "test" should match the snapshot 1`] = `
<div>
  <div
    class="test"
  >
    <div
      class="icheckbox indeterminate"
    >
      <input
        style="opacity: 0; position: absolute;"
        type="checkbox"
        value=""
      />
      <ins
        class="iCheck-helper"
        role="presentation"
        style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
      />
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> when children are passed should match the snapshot 1`] = `
<div>
  <div>
    <div
      class="icheckbox indeterminate"
    >
      <input
        style="opacity: 0; position: absolute;"
        type="checkbox"
        value=""
      />
      <ins
        class="iCheck-helper"
        role="presentation"
        style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
      />
    </div>
  </div>
</div>
`;
